# docloop.io-test

./: README.md  justfile  pyproject.toml
src/media_service/: __init__.py  file_manager.py
src/media_service/templates/: file_list.html.j2  file_list_item.html.j2  root.html.j2
