[tool.poetry]
name = "media-service"
version = "0.1.0"
description = ""
authors = ["Antoine Cezar <antoine@cezar.fr>"]
readme = "README.md"
packages = [{include = "media_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
ruff = "^0.0.291"
pytest = "^7.4.2"
pycln = "^2.2.2"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
